# FastFourier

./: .gitignore  README.md  pyproject.toml
app/: analysis.py  main.py
app/routers/: interview.py  websockets.py
app/services/: audio.py
app/templates/: index.html
app/templates/assets/: script.js  style.css
